test/oscar/compiler/errors/logicalOpMismatch.oscar
def main() => unit = {
  Println(1 && true);
}